[package]
name = "quantum_dashboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "quantum_dashboard_app"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
egui-macroquad = "0.15"
egui = "0.31.1"
egui_plot = "0.31.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
miniquad = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
